manage article table overflow fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -124,3 +124,7 @@ input[type=search]
     border: 2px solid black;
 }
 
+.manageArticleData {
+  max-width: 200px;
+  overflow: hidden;
+}
